==================================================
Changes in CALIBERcodelists version 0.2-6
==================================================

BUG FIXES

- Lines containing only a single quote are no longer
  wrongly considered as categories, when importing
  from CSV files (e.g. if the file has been edited
  in Excel)
- regression in showhtml() -- it didn't print the
  name of individual dictionaries because it was
  counting the number of dictionaries in use 
  incorrectly, now fixed.
- dictis() had an error in detecting which dictionaries are
  in use (was querying the META table directly, now
  corrected to use getdictionary() instead).

==================================================
Changes in CALIBERcodelists version 0.2-5
==================================================

CHANGES

- Timestamp is always updated on export, and contains
  the time/date that the file was saved.

BUG FIXES

- Source of imported codelists was ignored, corrected
  in as.codelist()
- convert ICD9 to Read codes did not work, now fixed.

==================================================
Changes in CALIBERcodelists version 0.2-4
==================================================

CHANGES

- Extract Source information from Rmd file
- icd10source option removed from export; instead
  Source for master dictionary export should be set
  using setMetadata before export

BUG FIXES

- Read to ICD-9 conversion now works (a function
  was omitted from previous version)
- Bug in setMetadata (setting Source) corrected
- Allow up to four codelists or dictionary names in
  setdictionary 

==================================================
Changes in CALIBERcodelists version 0.2-3
==================================================

NEW FEATURES

- Allow setMetadata to set data source HES/ONS in META
- Add a decode() function to return the term from a 
  medcode, Read code, ICD10 or OPCS code
- Add the ICD9-CM dictionary and ICD9-ICD10 mapping

BUG FIXES
